Make sure paragraphs in .graphContent can't overflow

--- a/src/components/graphContent/graphContent.scss
+++ b/src/components/graphContent/graphContent.scss
@@ -3,4 +3,8 @@
 .graphContent {
   padding: 0 $default-padding;
   margin-bottom: $default-margin;
+
+  p {
+    max-width: 100%;
+  }
 }
